--- a/templates/suite.html
+++ b/templates/suite.html
@@ -1,12 +1,10 @@
 <div class="suite" id="{{id}}">
     <button class="suite--{{type}} u-full-width flat" onclick="cta.contract.local.suite(this.parentElement)">
         <span class="suite__name u-pull-left">{{{name}}}</span>
-        <span class="suite__info u-pull-right">tests: {{{tests}}}</span>
-        <span class="suite__info u-pull-right">failures: {{{failures}}}</span>
-        <span class="suite__info u-pull-right">time: {{{time}}}</span>
+        {{{labels}}}
     </button>
     <div class="suite__contents">
-        {{{rendered.suiteProperties}}}
-        {{{rendered.suiteTests}}}
+        {{{properties}}}
+        {{{tests}}}
     </div>
 </div>
