--- a/templates/properties.html
+++ b/templates/properties.html
@@ -1,4 +1,4 @@
-<div id={{id}} class="properties{{single}}">
+<div id={{id}} class="properties">
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">Properties</span>
     </button>
@@ -8,7 +8,7 @@
             <th>VALUE</th>
         </thead>
         <tbody>
-            {{{rendered.properties}}}
+            {{{properties}}}
         </tbody>
     </table>
 </div>
