--- a/templates/suite.html
+++ b/templates/suite.html
@@ -1,5 +1,5 @@
 <div class="suite" id="{{id}}">
-    <button class="suite--{{type}} u-full-width flat" onclick="cta.contract.local.suite(this.parentElement)">
+    <button class="suite--{{type}} u-full-width flat" onclick="toggle(this.parentElement)">
         <span class="suite__name u-pull-left">{{{name}}}</span>
         {{{labels}}}
     </button>
