adding toggle hidden

--- a/templates/test.html
+++ b/templates/test.html
@@ -1,5 +1,5 @@
 <div class="test" id="{{id}}">
-    <button class="test__name test--{{type}} u-full-width {{flat}}" onclick="toggle(this.parentElement)">
+    <button class="test__name test--{{type}} u-full-width {{flat}}" onclick="toggleContraction(this.parentElement)">
         <span class="u-pull-left">{{name}}</span>
         <span class="u-pull-right">TIME: {{time}}</span>
     </button>
