can search suites

--- a/templates/options.html
+++ b/templates/options.html
@@ -6,7 +6,7 @@
             <div class="options__cta row">
                 <div class="u-full-width">
                     <button disabled class="options_search__name">SEARCH</button>
-                    <input type="text" class="options_search__input" oninput="cta.search.suites(this.value)"></input>
+                    <input type="text" class="options_search__input" oninput="searchSuites(this.value)"></input>
                 </div>
                 <div class="options__buttons">
                     <button class="one-half column button-primary" onclick="hidePassingSuites(this)">HIDE PASSING</button>
