--- a/templates/options.html
+++ b/templates/options.html
@@ -19,12 +19,12 @@
             <div class="options__cta row">
                 <div class="u-full-width">
                     <button disabled class="options_search__name">SEARCH</button>
-                    <input type="text" class="options_search__input" oninput="cta.search.tests(this.value)"></input>
+                    <input type="text" class="options_search__input" oninput="searchTests(this.value)"></input>
                 </div>
                 <div class="options__buttons">
-                    <button class="one-third column button-primary" onclick="cta.hide.passing.tests(this)">HIDE PASSING</button>
-                    <button class="one-third column button-primary" onclick="cta.hide.tests(this)">HIDE ALL</button>
-                    <button class="one-third column button-primary" onclick="cta.contract.global.tests(this)">CONTRACT ALL</button>
+                    <button class="one-third column button-primary" onclick="hidePassingTests(this)">HIDE PASSING</button>
+                    <button class="one-third column button-primary" onclick="hideTests(this)">HIDE ALL</button>
+                    <button class="one-third column button-primary" onclick="contractTests(this)">CONTRACT ALL</button>
                 </div>
             </div>
         </div>
