--- a/templates/options.html
+++ b/templates/options.html
@@ -6,7 +6,7 @@
             <div class="options__cta row">
                 <div class="u-full-width">
                     <button disabled class="options_search__name">SEARCH</button>
-                    <input type="text" class="options_search__input" oninput="searchSuites(this.value)"></input>
+                    <input placeholder="suite names" type="text" class="options_search__input" oninput="searchSuites(this.value)"></input>
                 </div>
                 <div class="options__buttons">
                     <button class="one-half column button-primary" onclick="hidePassingSuites(this)">HIDE PASSING</button>
@@ -19,7 +19,7 @@
             <div class="options__cta row">
                 <div class="u-full-width">
                     <button disabled class="options_search__name">SEARCH</button>
-                    <input type="text" class="options_search__input" oninput="searchTests(this.value)"></input>
+                    <input placeholder="test names and messages" type="text" class="options_search__input" oninput="searchTests(this.value)"></input>
                 </div>
                 <div class="options__buttons">
                     <button class="one-third column button-primary" onclick="hidePassingTests(this)">HIDE PASSING</button>
@@ -33,7 +33,7 @@
             <div class="options__cta row">
                 <div class="u-full-width">
                     <button disabled class="options_search__name">SEARCH</button>
-                    <input type="text" class="options_search__input" oninput="cta.search.properties(this.value)"></input>
+                    <input placeholder="propety keys and values" type="text" class="options_search__input" oninput="cta.search.properties(this.value)"></input>
                 </div>
                 <div class="options__buttons">
                     <button class="one-half column button-primary" onclick="cta.hide.properties(this)">HIDE ALL</button>
