removed module.exports thingy from templates

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,10 +11,7 @@
     <h1 class="u-full-width">{{title}}</h1>
     <div class="row offset-by-one ten columns">{{{options}}}</div>
     <div class="row offset-by-one ten columns">{{{suites}}}</div>
-    <script type="text/javascript">
-        module = {} //this is entirely for testing with jest
-        {{{javascript}}}
-    </script>
+    <script type="text/javascript">{{{javascript}}}</script>
 </body>
 
 </html>
