adding scroll bar so you do not have search near the top all the time

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,8 @@
 <body>
     <h1 class="u-full-width">{{title}}</h1>
     <div class="row offset-by-one ten columns">{{{options}}}</div>
-    <div class="row offset-by-one ten columns">{{{suites}}}</div>
+    <div>
+    <div class="row offset-by-one ten columns suites_container">{{{suites}}}</div>
     <script type="text/javascript">{{{javascript}}}</script>
 </body>
 
