add all labels not just certain ones

--- a/templates/test.html
+++ b/templates/test.html
@@ -1,7 +1,7 @@
 <div class="test" id="{{id}}">
     <button class="test__name test--{{type}} u-full-width {{flat}}" onclick="toggleContraction(this.parentElement)">
         <span class="u-pull-left">{{name}}</span>
-        <span class="u-pull-right">TIME: {{time}}</span>
+        {{{labels}}}
     </button>
     {{{messages}}}
 </div>
