adding npm test to generate its view

--- a/templates/test.html
+++ b/templates/test.html
@@ -1,6 +1,6 @@
 <div class="test" id="{{id}}">
     <button class="test__name test--{{type}} u-full-width {{flat}}" onclick="toggleContraction(this.parentElement)">
-        <span class="u-pull-left">{{name}}</span>
+        <span class="u-pull-left">{{{name}}}</span>
         {{{labels}}}
     </button>
     {{{messages}}}
