--- a/templates/options.html
+++ b/templates/options.html
@@ -1,4 +1,59 @@
-<div>
+<svg style="display: none">
+    <symbol id="options__icon" width="36" height="38">
+        <rect x="0" y="8" rx="2" ry="2" width="25" height="5" style="fill:#fff;"></rect>
+        <rect x="0" y="15" rx="2" ry="2" width="25" height="5" style="fill:#fff;"></rect>
+        <rect x="0" y="22" rx="2" ry="2" width="25" height="5" style="fill:#fff;"></rect>
+    </symbol>
+</svg>
+<button id="optionsCollapsed" title="advanced search" class="options_container button-primary options_container__toggle" onclick="showOptions()">
+    <svg width="25" height="38">
+        <use xlink:href="#options__icon"></use>
+    </svg>
+</button>
+<div id="optionsExpanded" class="options_container" style="display: none">
+    <button class="flat button-primary u-full-width options_container__toggle" onclick="hideOptions()">
+        <svg class="u-pull-left" width="36" height="38">
+            <use xlink:href="#options__icon"></use>
+        </svg>
+        <span>SEARCH</span></button>
+    <div class="options">
+        <div class="option">
+            <button class="option__title u-full-width button-primary">SUTIES</button>
+            <div class="option__container">
+                <button class="button-primary u-full-width">HIDE PASSING</button>
+                <button class="button-primary u-full-width">CONTRACT ALL</button>
+                <div class="search">
+                    <button class="u-full-width" disabled>SEARCH</button>
+                    <input class="u-full-width" type="text"></input>
+                </div>
+            </div>
+        </div>
+        <div class="option">
+            <button class="option__title u-full-width button-primary">TESTS</button>
+            <div class="option__container">
+                <button class="button-primary u-full-width">HIDE PASSING</button>
+                <button class="button-primary u-full-width">HIDE ALL</button>
+                <button class="button-primary u-full-width">CONTRACT ALL</button>
+                <div class="search">
+                    <button class="u-full-width" disabled>SEARCH</button>
+                    <input class="u-full-width" type="text"></input>
+                </div>
+            </div>
+        </div>
+        <div class="option">
+            <button class="option__title u-full-width button-primary">PROPERTIES</button>
+            <div class="option__container">
+                <button class="button-primary u-full-width">HIDE ALL</button>
+                <button class="button-primary u-full-width">CONTRACT ALL</button>
+                <div class="search">
+                    <button class="u-full-width" disabled>SEARCH</button>
+                    <input class="u-full-width" type="text"></input>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- <div>
     <button class="button-primary u-full-width" onclick="toggleContraction(this.parentElement)">ADVANCED SEARCH</button>
     <div class="options contracted">
         <div class="option">
@@ -43,3 +98,4 @@
         </div>
     </div>
 </div>
+ -->
