--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
 <body>
     <h1 class="u-full-width">{{title}}</h1>
     <div>
-        <div id="options_container" class="options_container column one">{{{options}}}</div>
-        <div id="suites_container" class="u-pull-right columns eleven suites_container">{{{suites}}}</div>
+        <div id="options_container" class="container__options column one">{{{options}}}</div>
+        <div id="suites_container" class="u-pull-right columns eleven container__suites">{{{suites}}}</div>
     </div>
     <script type="text/javascript">{{{javascript}}}</script>
 </body>
