--- a/templates/options.html
+++ b/templates/options.html
@@ -16,86 +16,40 @@
             <use xlink:href="#options__icon"></use>
         </svg>
         <span>SEARCH</span></button>
-    <div class="options">
+    <div id="options" class="options">
         <div class="option">
-            <button class="option__title u-full-width button-primary">SUTIES</button>
+            <button class="option__title u-full-width button-primary flat" onclick="toggleContraction(this.parentElement)">SUTIES</button>
             <div class="option__container">
-                <button class="button-primary u-full-width">HIDE PASSING</button>
-                <button class="button-primary u-full-width">CONTRACT ALL</button>
+                <button class="button-primary u-full-width" onclick="hidePassingSuites(this)">HIDE PASSING</button>
+                <button class="button-primary u-full-width" onclick="contractSuites(this)">CONTRACT ALL</button>
                 <div class="search">
                     <button class="u-full-width" disabled>SEARCH</button>
-                    <input class="u-full-width" type="text"></input>
+                    <input class="u-full-width" type="text" oninput="searchSuites(this.value)" placeholder="suite names"></input>
                 </div>
             </div>
         </div>
         <div class="option">
-            <button class="option__title u-full-width button-primary">TESTS</button>
+            <button class="option__title u-full-width button-primary flat" onclick="toggleContraction(this.parentElement)">TESTS</button>
             <div class="option__container">
-                <button class="button-primary u-full-width">HIDE PASSING</button>
-                <button class="button-primary u-full-width">HIDE ALL</button>
-                <button class="button-primary u-full-width">CONTRACT ALL</button>
+                <button class="button-primary u-full-width" onclick="hidePassingTests(this)">HIDE PASSING</button>
+                <button class="button-primary u-full-width" onclick="hideTests(this)">HIDE ALL</button>
+                <button class="button-primary u-full-width" onclick="contractTests(this)">CONTRACT ALL</button>
                 <div class="search">
                     <button class="u-full-width" disabled>SEARCH</button>
-                    <input class="u-full-width" type="text"></input>
+                    <input class="u-full-width" type="text" oninput="searchTests(this.value)" placeholder="test names and messages"></input>
                 </div>
             </div>
         </div>
         <div class="option">
-            <button class="option__title u-full-width button-primary">PROPERTIES</button>
+            <button class="option__title u-full-width button-primary flat" onclick="toggleContraction(this.parentElement)">PROPERTIES</button>
             <div class="option__container">
-                <button class="button-primary u-full-width">HIDE ALL</button>
-                <button class="button-primary u-full-width">CONTRACT ALL</button>
+                <button class="button-primary u-full-width" onclick="hideProperties(this)">HIDE ALL</button>
+                <button class="button-primary u-full-width" onclick="contractProperties(this)">CONTRACT ALL</button>
                 <div class="search">
                     <button class="u-full-width" disabled>SEARCH</button>
-                    <input class="u-full-width" type="text"></input>
+                    <input class="u-full-width" type="text" oninput="searchProperties(this.value)" placeholder="propety keys and values"></input>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<!-- <div>
-    <button class="button-primary u-full-width" onclick="toggleContraction(this.parentElement)">ADVANCED SEARCH</button>
-    <div class="options contracted">
-        <div class="option">
-            <button class="button-primary u-full-width option__name flat" onclick="toggleContraction(this.parentElement)">SUITES</button>
-            <div class="options__cta row">
-                <div class="u-full-width">
-                    <button disabled class="options_search__name">SEARCH</button>
-                    <input placeholder="suite names" type="text" class="options_search__input" oninput="searchSuites(this.value)"></input>
-                </div>
-                <div class="options__buttons">
-                    <button class="one-half column button-primary" onclick="hidePassingSuites(this)">HIDE PASSING</button>
-                    <button class="one-half column button-primary" onclick="contractSuites(this)">CONTRACT ALL</button>
-                </div>
-            </div>
-        </div>
-        <div class="option">
-            <button class="button-primary u-full-width option__name flat" onclick="toggleContraction(this.parentElement)">TESTS</button>
-            <div class="options__cta row">
-                <div class="u-full-width">
-                    <button disabled class="options_search__name">SEARCH</button>
-                    <input placeholder="test names and messages" type="text" class="options_search__input" oninput="searchTests(this.value)"></input>
-                </div>
-                <div class="options__buttons">
-                    <button class="one-third column button-primary" onclick="hidePassingTests(this)">HIDE PASSING</button>
-                    <button class="one-third column button-primary" onclick="hideTests(this)">HIDE ALL</button>
-                    <button class="one-third column button-primary" onclick="contractTests(this)">CONTRACT ALL</button>
-                </div>
-            </div>
-        </div>
-        <div class="option">
-            <button class="button-primary u-full-width option__name flat" onclick="toggleContraction(this.parentElement)">PROPERTIES</button>
-            <div class="options__cta row">
-                <div class="u-full-width">
-                    <button disabled class="options_search__name">SEARCH</button>
-                    <input placeholder="propety keys and values" type="text" class="options_search__input" oninput="searchProperties(this.value)"></input>
-                </div>
-                <div class="options__buttons">
-                    <button class="one-half column button-primary" onclick="hideProperties(this)">HIDE ALL</button>
-                    <button class="one-half column button-primary" onclick="contractProperties(this)">CONTRACT ALL</button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
- -->
