--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,8 @@
 
 <body>
     <h1 class="u-full-width">{{title}}</h1>
+    <div class="junit_info">{{{junit_info.suites}}}</div>
+    <div class="junit_info">{{{junit_info.tests}}}</div>
     <div>
         <div id="options_container" class="container__options column one">{{{options}}}</div>
         <div id="suites_container" class="u-pull-right columns eleven container__suites">{{{suites}}}</div>
