--- a/templates/suite.html
+++ b/templates/suite.html
@@ -1,9 +1,9 @@
 <div class="suite" id="{{id}}">
-    <button class="suite--{{type}} u-full-width flat" onclick="toggleContraction(this.parentElement)">
+    <button class="suite--{{type}} u-full-width round" onclick="toggleContraction(this.parentElement)" >
         <span class="suite__name u-pull-left">{{{name}}}</span>
         {{{labels}}}
     </button>
-    <div class="suite__contents">
+    <div class="suite__contents {{contracted}}">
         {{{properties}}}
         {{{tests}}}
     </div>
