--- a/templates/options.html
+++ b/templates/options.html
@@ -21,7 +21,7 @@
             <button class="option__title u-full-width button-primary flat" onclick="toggleContraction(this.parentElement)">SUITES</button>
             <div class="option__container">
                 <button class="button-primary u-full-width" onclick="hidePassingSuites(this)">HIDE PASSING</button>
-                <button class="button-primary u-full-width" onclick="contractSuites(this)">CONTRACT ALL</button>
+                <button class="button-primary u-full-width" id="contractSuits" onclick="contractSuites(this)">EXPAND ALL</button>
                 <div class="search">
                     <button class="u-full-width" disabled>SEARCH</button>
                     <input class="u-full-width" type="text" oninput="searchSuites(this.value)" placeholder="suite names"></input>
