moving some things around

--- a/src/component/header/header.css
+++ b/src/component/header/header.css
@@ -21,7 +21,7 @@
 
     & .icon {
       margin-top: 3px;
-      margin-left: 10px;
+      margin-right: 10px;
 
       & .background,
       & .char,
