--- a/src/component/header/header.css
+++ b/src/component/header/header.css
@@ -1,10 +1,10 @@
 :root {
   --fail: #E74C3C;
-  --pass: #00D1B2;
+  --pass: #23D160;
   --error: #FFDD57;
   --skipped: #ECF0F1;
+  --unknown: #3273DC;
   --info: #2C3E50;
-  --unknown: #23D160;
   --burger-margin: 7px;
 }
 
@@ -281,18 +281,18 @@
 
     & .is-unknown {
       & a {
-        background-color: color(var(--unknown) b(20%)) !important;
+        background-color: color(var(--unknown) tint(50%)) !important;
 
         &:hover {
-          background-color: color(var(--unknown) b(10%)) !important;
+          background-color: color(var(--unknown) tint(40%)) !important;
         }
       }
 
       &.is-active a {
-        background-color: var(--unknown) !important;
+        background-color: color(var(--unknown) tint(30%)) !important;
 
         &:hover {
-          background-color: color(var(--unknown) b(10%)) !important;
+          background-color: color(var(--unknown) tint(40%)) !important;
         }
       }
     }
